--- a/htmls/ofertas.html
+++ b/htmls/ofertas.html
@@ -34,14 +34,18 @@
             <div class="flex-nav">
                 <ul class="lista-nav">
                     <li class="li-nav"> <a class="direccion__" href="../index.html">inicio</a></li>
-                    <li class="li-nav"> <a class="direccion__" href="../htmls\productos.html">productos</a></li>
+                    <li class="li-nav"> <a class="direccion__" href="../htmls/productos.html">productos</a></li>
                     <li class="li-nav"> <a class="direccion__" href="../htmls/acercadenosotros.html">nosotros</a></li>
-                    <li class="li-nav"><a class="direccion__" href="../htmls/ofertas.html"> ofertas</a></li>
+                    <li class="li-nav"> <a class="direccion__" href="ofertas.html"> ofertas</a></li>
                     <li class="li-nav"> <a class="direccion__" href="../htmls/contacto.html">contacto</a></li>
                 </ul>
             </div>
         </nav>
         <section class="content_productos">
+        <div class="Sub_content">
+            <h2 class="title_ofertas">Ofertas por tiempo limitado!</h2>
+        </div>
+        <div class="Content_ofertas">
             <div class="card_" style="width: 18rem;">
                 <img src="../img/producto1.jpg" class="card_img" alt="...">
                 <div class="card-body">
@@ -161,8 +165,11 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi modi corrupti, laboriosam, maiores placeat esse, praesentium sapiente tempore quam nobis fugiat aliquam nisi? Minima quam quia nobis eveniet animi accusantium vel blanditiis reprehenderit ea dicta facere, mollitia ad cupiditate cumque suscipit a officia velit ducimus eius fugit? Rem, sint corporis!
                     </p>
                 </div>
-            </div>                                                               
+        </div>
+        </div>                                                               
         </section>
+        <aside>
+        </aside>
         <footer>
         <div class="footer__">
             <h3 class="footer-title">Redes sociales</h3>
@@ -173,6 +180,6 @@
                 </ul>
         </div>
         </footer>
-    </div>
+        </div>
 </body>
 </html>
