--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="flex-nav">
                 <ul class="lista-nav">
                     <li class="li-nav"> <a class="direccion__" href="index.html">inicio</a></li>
-                    <li class="li-nav"> <a class="direccion__" href="htmls\productos.html">productos</a></li>
+                    <li class="li-nav"> <a class="direccion__" href="htmls/productos.html">productos</a></li>
                     <li class="li-nav"> <a class="direccion__" href="htmls/acercadenosotros.html">nosotros</a></li>
-                    <li class="li-nav">ofertas</li>
+                    <li class="li-nav"><a class="direccion__" href="htmls/ofertas.html"> ofertas</a></li>
                     <li class="li-nav"> <a class="direccion__" href="htmls/contacto.html">contacto</a></li>
                 </ul>
             </div>
