--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -36,7 +36,7 @@
                     <li class="li-nav"> <a class="direccion__" href="../index.html">inicio</a></li>
                     <li class="li-nav"><a class="direccion__" href="../htmls\productos.html">productos</a></li>
                     <li class="li-nav"> <a class="direccion__" href="../htmls/acercadenosotros.html">nosotros</a></li>
-                    <li class="li-nav">ofertas</li>
+                    <li class="li-nav"> <a class="direccion__" href="../htmls/ofertas.html"> ofertas</a></li>
                     <li class="li-nav"><a class="direccion__" href="../htmls/contacto.html">contacto</a></li>
                 </ul>
             </div>
